# aws-robomaker-small-warehouse-world

./: CMakeLists.txt  package.xml
worlds/: no_roof_small_warehouse.world
